Fix pre-existing issue of Channel tabs overflowing on desktop view in some locales

--- a/src/renderer/views/Channel/Channel.css
+++ b/src/renderer/views/Channel/Channel.css
@@ -98,11 +98,14 @@
   gap: 32px;
   padding-block: .3em;
   padding-inline: 0;
+  flex-direction: column;
+  flex-wrap: nowrap;
 }
 
 .tabs {
   display: flex;
   flex: 0 1 33%;
+  flex-wrap: wrap;
 }
 
 .tab {
